// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`should successfully create a scale viewer component 1`] = `
<div
  class="scale-viewer css-0"
  data-testid="scale-viewer"
>
  <p
    aria-label="scaleLabel"
    aria-live="polite"
    class="css-0"
    role="region"
  >
    <span
      aria-hidden="true"
    >
      1:
      336,409
    </span>
  </p>
</div>
`;

exports[`should successfully create a scale viewer component with additional css classes and box properties 1`] = `
<div
  class="scale-viewer test test1 test2 css-0"
  data-testid="scale-viewer"
>
  <p
    aria-label="scaleLabel"
    aria-live="polite"
    class="css-0"
    role="region"
  >
    <span
      aria-hidden="true"
    >
      1:
      336,409
    </span>
  </p>
</div>
`;
